[package]
name = "agenticrs"
version = "0.1.0"
edition = "2021"
description = "A resilience and observability layer for LLM and agentic workflows."
license = "MIT"
repository = "https://github.com/mahmudsudo/agenticrs"

[dependencies]
tokio = { version = "1.0", features = ["time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

